Remove empty spaces from function removal